--- a/frontend/src/components/Pages/Footer.module.css
+++ b/frontend/src/components/Pages/Footer.module.css
@@ -3,7 +3,11 @@
 
 
 .footer {
-  background-color: #333;
+
+
+  box-shadow: -5px -7px 10px #4CCD99, 0 0 20px #4CCD99;
+
+  background-color: #007F73;
   color: #fff;
   padding: 20px 0;
   text-align: center;
