--- a/frontend/src/components/Pages/Subpage/DropdownStyle.css
+++ b/frontend/src/components/Pages/Subpage/DropdownStyle.css
@@ -6,8 +6,8 @@
 
 .buttons {
   margin-top: 10px;
-  background-color: #4CAF50;
-  color: #212121;
+  background-color: #4CCD99;
+  color: #FFF455;
   padding: 10px 15px;
   font-size: 15px;
   font-weight: bold;
@@ -22,14 +22,14 @@
   position: absolute;
   z-index: 1;
   min-width: 100px;
-  background-color: #212121;
-  border: 2px solid #4CAF50;
+  background-color: #4CCD99;
+  border: 2px solid #FFF455;
   border-radius: 0px 0px 15px 15px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 .dropdown-content a {
-  color: #4CAF50;
+  color: #FFF455;
   padding: 1px 20px;
   text-decoration: none;
   display: block;
@@ -37,8 +37,8 @@
 }
 
 .dropdown-content a:hover {
-  background-color: #4CAF50;
-  color: #212121;
+  background-color: #007F73;
+  color: #FFC700;
 }
 
 .dropdown-content a:focus {
