--- a/frontend/src/components/menu/Options.css
+++ b/frontend/src/components/menu/Options.css
@@ -1,6 +1,10 @@
-.section:hover {
+.item-section:hover {
   background-color: black;
   border-radius: 70px;
   padding: 5px;
   margin-right: 40px;
+}
+
+.section:hover .Dropdown.item {
+  display: block;
 }
